--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@mui/material": "^7.3.4",
     "@mui/x-date-pickers": "^8.15.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.27.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "recharts": "^3.3.0"
